add some adaptive layout

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
         </section>
         <!--What we do-->
-        <section class="section">
+        <section class="work__section section">
             <div class="container">
                 <h2 class="title">Чим ми займаємось</h2>
                 <ul class="work list">
