add more adaptive layout

--- a/index.html
+++ b/index.html
@@ -101,10 +101,10 @@
                                 <svg width="16" height="15" class="form__checkbox-icon">
                                     <use href="./images/sprite.svg#icon-check"></use>
                                 </svg>
-                                Погоджуюся з розсилкою та приймаю <a href="" class="form__checkbox-link">Умови договору</a>
+                                Погоджуюся з розсилкою та приймаю<a href="" class="form__checkbox-link">Умови договору</a>
                             </label>
                         </p>
-                        <div class="form__btn"><button type="submit" class="button form__button">Надіслати</button></div>
+                        <button type="submit" class="button form__button">Надіслати</button>
                     </form>
             </div>
         </div>
