--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                                 <svg width="16" height="15" class="form__checkbox-icon">
                                     <use href="./images/sprite.svg#icon-check"></use>
                                 </svg>
-                                Погоджуюся з розсилкою та приймаю<a href="" class="form__checkbox-link">Умови договору</a>
+                                Погоджуюся з розсилкою та приймаю &nbsp;<a href="" class="form__checkbox-link">Умови договору</a>
                             </label>
                         </p>
                         <button type="submit" class="button form__button">Надіслати</button>
