--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="page-header">
         <div class="container-header container">
             <a href="./index.html" class="logo">Web<span class="logo logo--black">Studio</span></a>
-            <nav class="site-nav">
+            <!-- <nav class="site-nav">
                 <ul class="site-nav__list list">
                     <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current link">Студія</a></li>
                     <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link link">Портфоліо</a></li>
@@ -42,17 +42,45 @@
                         +38 096 111 11 11
                     </a>
                 </li>
-            </ul>
-            <div class="mobile-menu">
-                <button type="button" class="mobile-menu__button" aria-expanded="false" aria-controls="mobile-menu__container" data-menu-button>
-                    <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
-                        <use class="mobile-menu__icon-cross" href="./images/sprite.svg#cross"></use>
-                        <use class="mobile-menu__icon-menu" href="./images/sprite.svg#menu"></use>
-                    </svg>
-                </button>
-                <div class="mobile-menu__container" id="mobile-menu__container" data-menu>
-                    Content menu
-                </div>
+            </ul> -->
+            <button type="button" class="mobile-menu__button" aria-expanded="false" aria-controls="mobile-menu__container" data-menu-button>
+                <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
+                    <use class="mobile-menu__icon-cross" href="./images/sprite.svg#cross"></use>
+                    <use class="mobile-menu__icon-menu" href="./images/sprite.svg#menu"></use>
+                </svg>
+            </button>
+            <div class="mobile-menu__container" id="mobile-menu__container" data-menu>
+                <nav class="site-nav">
+                    <ul class="site-nav__list list">
+                        <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current link">Студія</a></li>
+                        <li class="site-nav__item"><a href="./portfolio.html" class="site-nav__link link">Портфоліо</a></li>
+                        <li class="site-nav__item"><a href="" class="site-nav__link link">Контакти</a></li>
+                    </ul>
+                </nav>
+                <ul class="contacts list">
+                    <li class="contacts__item">
+                        <a href="mailto:info@devstudio.com" class="contacts__link link">
+                            <svg class="contacts__icon" width="16" height="12">
+                                <use href="./images/sprite.svg#icon-envelope"></use>
+                            </svg>
+                            info@devstudio.com
+                        </a>
+                    </li>
+                    <li class="contacts__item">
+                        <a href="tel:+380961111111" class="contacts__link contacts__link--big link">
+                            <svg class="contacts__icon" width="10px" height="16px">
+                                <use href="./images/sprite.svg#icon-smartphone"></use>
+                            </svg>
+                            +38 096 111 11 11
+                        </a>
+                    </li>
+                </ul>
+                <ul class="social-platform list">
+                    <li class="social-platform__item"><a href="" class="social-platform__link link">Instagram</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link link">Twitter</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link link">Facebook</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link link">LinkedIn</a></li>
+                </ul>
             </div>
         </div>
     </header>
