add mobile menu

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
                     </li>
                 </ul>
                 <ul class="social-platform list">
-                    <li class="social-platform__item"><a href="" class="social-platform__link link">Instagram</a></li>
-                    <li class="social-platform__item"><a href="" class="social-platform__link link">Twitter</a></li>
-                    <li class="social-platform__item"><a href="" class="social-platform__link link">Facebook</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link social-platform__link--line link">Instagram</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link social-platform__link--line link">Twitter</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link social-platform__link--line link">Facebook</a></li>
                     <li class="social-platform__item"><a href="" class="social-platform__link link">LinkedIn</a></li>
                 </ul>
             </div>
