--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <header class="page-header">
         <div class="container-header container">
             <a href="./index.html" class="logo">Web<span class="logo logo--black">Studio</span></a>
-            <button type="button" class="mobile-menu__button" aria-expanded="false" aria-controls="mobile-menu__container" data-menu-button>
+            <button type="button" class="mobile-menu__button" aria-expanded="false" aria-controls="mobile-menu" data-menu-button>
                 <svg width="40px" height="40px" aria-label="Перемикач мобільного меню">
                     <use class="mobile-menu__icon-cross" href="./images/sprite.svg#cross"></use>
                     <use class="mobile-menu__icon-menu" href="./images/sprite.svg#menu"></use>
                 </svg>
             </button>
-            <div class="mobile-menu__container" id="mobile-menu__container" data-menu>
+            <div class="mobile-menu" id="mobile-menu" data-menu>
                 <nav class="site-nav">
                     <ul class="site-nav__list list">
                         <li class="site-nav__item"><a href="./index.html" class="site-nav__link site-nav__link--current link">Студія</a></li>
@@ -51,9 +51,9 @@
                     </li>
                 </ul>
                 <ul class="social-platform list">
-                    <li class="social-platform__item"><a href="" class="social-platform__link social-platform__link--line link">Instagram</a></li>
-                    <li class="social-platform__item"><a href="" class="social-platform__link social-platform__link--line link">Twitter</a></li>
-                    <li class="social-platform__item"><a href="" class="social-platform__link social-platform__link--line link">Facebook</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link link">Instagram</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link link">Twitter</a></li>
+                    <li class="social-platform__item"><a href="" class="social-platform__link link">Facebook</a></li>
                     <li class="social-platform__item"><a href="" class="social-platform__link link">LinkedIn</a></li>
                 </ul>
             </div>
