--- a/portfolio.html
+++ b/portfolio.html
@@ -32,30 +32,32 @@
                         <li class="site-nav__item"><a href="" class="site-nav__link link">Контакти</a></li>
                     </ul>
                 </nav>
-                <ul class="contacts list">
-                    <li class="contacts__item">
-                        <a href="mailto:info@devstudio.com" class="contacts__link link">
-                            <svg class="contacts__icon" width="16" height="12">
-                                <use href="./images/sprite.svg#icon-envelope"></use>
-                            </svg>
-                            info@devstudio.com
-                        </a>
-                    </li>
-                    <li class="contacts__item">
-                        <a href="tel:+380961111111" class="contacts__link contacts__link--big link">
-                            <svg class="contacts__icon" width="10px" height="16px">
-                                <use href="./images/sprite.svg#icon-smartphone"></use>
-                            </svg>
-                            +38 096 111 11 11
-                        </a>
-                    </li>
-                </ul>
-                <ul class="social-platform list">
-                    <li class="social-platform__item"><a href="" class="social-platform__link link">Instagram</a></li>
-                    <li class="social-platform__item"><a href="" class="social-platform__link link">Twitter</a></li>
-                    <li class="social-platform__item"><a href="" class="social-platform__link link">Facebook</a></li>
-                    <li class="social-platform__item"><a href="" class="social-platform__link link">LinkedIn</a></li>
-                </ul>
+                <div>
+                    <ul class="contacts list">
+                        <li class="contacts__item">
+                            <a href="mailto:info@devstudio.com" class="contacts__link link">
+                                <svg class="contacts__icon" width="16" height="12">
+                                    <use href="./images/sprite.svg#icon-envelope"></use>
+                                </svg>
+                                info@devstudio.com
+                            </a>
+                        </li>
+                        <li class="contacts__item">
+                            <a href="tel:+380961111111" class="contacts__link contacts__link--big link">
+                                <svg class="contacts__icon" width="10px" height="16px">
+                                    <use href="./images/sprite.svg#icon-smartphone"></use>
+                                </svg>
+                                +38 096 111 11 11
+                            </a>
+                        </li>
+                    </ul>
+                    <ul class="social-platform list">
+                        <li class="social-platform__item"><a href="" class="social-platform__link link">Instagram</a></li>
+                        <li class="social-platform__item"><a href="" class="social-platform__link link">Twitter</a></li>
+                        <li class="social-platform__item"><a href="" class="social-platform__link link">Facebook</a></li>
+                        <li class="social-platform__item"><a href="" class="social-platform__link link">LinkedIn</a></li>
+                    </ul>
+                </div>
             </div>
         </div>
     </header>
